--- a/supporting-blog-content/twelvelabs-bedrock-marengo/blog_post_marengo_elasticsearch_bedrock.ipynb
+++ b/supporting-blog-content/twelvelabs-bedrock-marengo/blog_post_marengo_elasticsearch_bedrock.ipynb
@@ -47,20 +47,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "527bfdfe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: yt-dlp in ./.venv/lib/python3.13/site-packages (2025.9.5)\n",
+      "Requirement already satisfied: boto3 in ./.venv/lib/python3.13/site-packages (1.40.25)\n",
+      "Requirement already satisfied: ipython in ./.venv/lib/python3.13/site-packages (9.5.0)\n",
+      "Requirement already satisfied: tqdm in ./.venv/lib/python3.13/site-packages (4.67.1)\n",
+      "Requirement already satisfied: elasticsearch in ./.venv/lib/python3.13/site-packages (9.1.0)\n",
+      "Requirement already satisfied: ipywidgets in ./.venv/lib/python3.13/site-packages (8.1.7)\n",
+      "Requirement already satisfied: python-dotenv in ./.venv/lib/python3.13/site-packages (1.1.1)\n",
+      "Requirement already satisfied: botocore<1.41.0,>=1.40.25 in ./.venv/lib/python3.13/site-packages (from boto3) (1.40.25)\n",
+      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in ./.venv/lib/python3.13/site-packages (from boto3) (1.0.1)\n",
+      "Requirement already satisfied: s3transfer<0.14.0,>=0.13.0 in ./.venv/lib/python3.13/site-packages (from boto3) (0.13.1)\n",
+      "Requirement already satisfied: decorator in ./.venv/lib/python3.13/site-packages (from ipython) (5.2.1)\n",
+      "Requirement already satisfied: ipython-pygments-lexers in ./.venv/lib/python3.13/site-packages (from ipython) (1.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in ./.venv/lib/python3.13/site-packages (from ipython) (0.19.2)\n",
+      "Requirement already satisfied: matplotlib-inline in ./.venv/lib/python3.13/site-packages (from ipython) (0.1.7)\n",
+      "Requirement already satisfied: pexpect>4.3 in ./.venv/lib/python3.13/site-packages (from ipython) (4.9.0)\n",
+      "Requirement already satisfied: prompt_toolkit<3.1.0,>=3.0.41 in ./.venv/lib/python3.13/site-packages (from ipython) (3.0.52)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in ./.venv/lib/python3.13/site-packages (from ipython) (2.19.2)\n",
+      "Requirement already satisfied: stack_data in ./.venv/lib/python3.13/site-packages (from ipython) (0.6.3)\n",
+      "Requirement already satisfied: traitlets>=5.13.0 in ./.venv/lib/python3.13/site-packages (from ipython) (5.14.3)\n",
+      "Requirement already satisfied: elastic-transport<10,>=9.1.0 in ./.venv/lib/python3.13/site-packages (from elasticsearch) (9.1.0)\n",
+      "Requirement already satisfied: python-dateutil in ./.venv/lib/python3.13/site-packages (from elasticsearch) (2.9.0.post0)\n",
+      "Requirement already satisfied: typing-extensions in ./.venv/lib/python3.13/site-packages (from elasticsearch) (4.15.0)\n",
+      "Requirement already satisfied: comm>=0.1.3 in ./.venv/lib/python3.13/site-packages (from ipywidgets) (0.2.3)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0.14 in ./.venv/lib/python3.13/site-packages (from ipywidgets) (4.0.14)\n",
+      "Requirement already satisfied: jupyterlab_widgets~=3.0.15 in ./.venv/lib/python3.13/site-packages (from ipywidgets) (3.0.15)\n",
+      "Requirement already satisfied: urllib3!=2.2.0,<3,>=1.25.4 in ./.venv/lib/python3.13/site-packages (from botocore<1.41.0,>=1.40.25->boto3) (2.5.0)\n",
+      "Requirement already satisfied: certifi in ./.venv/lib/python3.13/site-packages (from elastic-transport<10,>=9.1.0->elasticsearch) (2025.8.3)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in ./.venv/lib/python3.13/site-packages (from jedi>=0.16->ipython) (0.8.5)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in ./.venv/lib/python3.13/site-packages (from pexpect>4.3->ipython) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in ./.venv/lib/python3.13/site-packages (from prompt_toolkit<3.1.0,>=3.0.41->ipython) (0.2.13)\n",
+      "Requirement already satisfied: six>=1.5 in ./.venv/lib/python3.13/site-packages (from python-dateutil->elasticsearch) (1.17.0)\n",
+      "Requirement already satisfied: executing>=1.2.0 in ./.venv/lib/python3.13/site-packages (from stack_data->ipython) (2.2.1)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in ./.venv/lib/python3.13/site-packages (from stack_data->ipython) (3.0.0)\n",
+      "Requirement already satisfied: pure-eval in ./.venv/lib/python3.13/site-packages (from stack_data->ipython) (0.2.3)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! pip install yt-dlp boto3 ipython tqdm elasticsearch ipywidgets python-dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b7e22c9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#########\n",
     "## Python Imports\n",
@@ -89,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9ad20274",
    "metadata": {},
    "outputs": [],
@@ -133,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "28c65352",
    "metadata": {},
    "outputs": [],
@@ -250,10 +305,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "78d25cf1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Video already exists. Skipping video download.\n",
+      "Metadata already exists. Loading metadata from file...\n",
+      "Video already exists. Skipping video download.\n",
+      "Metadata already exists. Loading metadata from file...\n",
+      "Video already exists. Skipping video download.\n",
+      "Metadata already exists. Loading metadata from file...\n",
+      "Video already exists. Skipping video download.\n",
+      "Metadata already exists. Loading metadata from file...\n",
+      "Video already exists. Skipping video download.\n",
+      "Metadata already exists. Loading metadata from file...\n"
+     ]
+    }
+   ],
    "source": [
     "#########\n",
     "## Retrieve Videos and put them on local file system\n",
@@ -350,10 +422,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "446cc5f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Titan's response:\n",
+      "The biggest blockbuster movies of all time are Avatar, Titanic, and Star Wars.  These films were all huge hits, and are among the highest-grossing movies of all time.  Other famous blockbusters include The Lord of the Rings trilogy, The Avengers, and Jurassic Park.  Blockbuster movies tend to feature exciting action and adventure, as well as memorable characters and storylines, and are very popular with audiences around the world.\n"
+     ]
+    }
+   ],
    "source": [
     "#########\n",
     "## Setup Bedrock, test connection\n",
@@ -408,10 +489,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "eed56bbb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AWS Account ID: REDACTED\n",
+      "✅ Successfully connected to S3 bucket: REDACTED\n"
+     ]
+    }
+   ],
    "source": [
     "#########\n",
     "## Validate S3 Configuration\n",
@@ -432,10 +522,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "25ac6c1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Video youtube_VWqJifMMgZE already exists in S3. Skipping upload.\n",
+      "Video youtube_Ox8ZLF6cGM0 already exists in S3. Skipping upload.\n",
+      "Video youtube_jan5CFWs9ic already exists in S3. Skipping upload.\n",
+      "Video youtube_qpoBjOg5RHU already exists in S3. Skipping upload.\n",
+      "Video youtube_22w7z_lT6YM already exists in S3. Skipping upload.\n"
+     ]
+    }
+   ],
    "source": [
     "#########\n",
     "## Uploadd videos to S3, and make note of where we put them in data object\n",
@@ -483,10 +585,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "746eb422",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing videos:   0%|          | 0/5 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "embeddings/videos/VWqJifMMgZE\n",
+      "Embedding youtube_VWqJifMMgZE already has an embedding. Skipping embedding creation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing videos:  40%|████      | 2/5 [00:00<00:00,  5.13it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "embeddings/videos/Ox8ZLF6cGM0\n",
+      "Embedding youtube_Ox8ZLF6cGM0 already has an embedding. Skipping embedding creation.\n",
+      "embeddings/videos/jan5CFWs9ic\n",
+      "Embedding youtube_jan5CFWs9ic already has an embedding. Skipping embedding creation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing videos:  80%|████████  | 4/5 [00:00<00:00,  6.22it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "embeddings/videos/qpoBjOg5RHU\n",
+      "Embedding youtube_qpoBjOg5RHU already has an embedding. Skipping embedding creation.\n",
+      "embeddings/videos/22w7z_lT6YM\n",
+      "Embedding youtube_22w7z_lT6YM already has an embedding. Skipping embedding creation.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing videos: 100%|██████████| 5/5 [00:00<00:00,  5.64it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "#########\n",
     "## Use Bedrock hosted Twelve Labs models to create video embeddings\n",
@@ -640,10 +799,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bff90833",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "\tembedding: len 1024\n",
+      "\tembeddingOption: visual-text\n",
+      "\tstartSec: 0.0\n",
+      "\tendSec: 6.199999809265137\n",
+      "1\n",
+      "\tembedding: len 1024\n",
+      "\tembeddingOption: visual-text\n",
+      "\tstartSec: 6.199999809265137\n",
+      "\tendSec: 10.399999618530273\n",
+      "2\n",
+      "\tembedding: len 1024\n",
+      "\tembeddingOption: visual-text\n",
+      "\tstartSec: 10.399999618530273\n",
+      "\tendSec: 17.299999237060547\n"
+     ]
+    }
+   ],
    "source": [
     "video_embedding_data = video_objects[0].get_embeddings_list()\n",
     "\n",
@@ -659,10 +840,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1f0e00aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Successfully connected to Elasticsearch: serverless\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -679,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0651bd8e",
    "metadata": {},
    "outputs": [],
@@ -723,10 +912,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "15bb091f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting Index 'twelvelabs-movie-trailer-flat' and then sleeping for 2 seconds\n",
+      "Index 'twelvelabs-movie-trailer-flat' created successfully\n",
+      "Deleting Index 'twelvelabs-movie-trailer-hnsw' and then sleeping for 2 seconds\n",
+      "Index 'twelvelabs-movie-trailer-hnsw' created successfully\n",
+      "Deleting Index 'twelvelabs-movie-trailer-int8_hnsw' and then sleeping for 2 seconds\n",
+      "Index 'twelvelabs-movie-trailer-int8_hnsw' created successfully\n",
+      "Deleting Index 'twelvelabs-movie-trailer-bbq_hnsw' and then sleeping for 2 seconds\n",
+      "Index 'twelvelabs-movie-trailer-bbq_hnsw' created successfully\n",
+      "Deleting Index 'twelvelabs-movie-trailer-bbq_flat' and then sleeping for 2 seconds\n",
+      "Index 'twelvelabs-movie-trailer-bbq_flat' created successfully\n",
+      "Indexing 155 documents into twelvelabs-movie-trailer-flat...\n",
+      "\tSuccessfully indexed 155 documents into twelvelabs-movie-trailer-flat\n",
+      "Completed indexing documents into twelvelabs-movie-trailer-flat\n",
+      "Indexing 155 documents into twelvelabs-movie-trailer-hnsw...\n",
+      "\tSuccessfully indexed 155 documents into twelvelabs-movie-trailer-hnsw\n",
+      "Completed indexing documents into twelvelabs-movie-trailer-hnsw\n",
+      "Indexing 155 documents into twelvelabs-movie-trailer-int8_hnsw...\n",
+      "\tSuccessfully indexed 155 documents into twelvelabs-movie-trailer-int8_hnsw\n",
+      "Completed indexing documents into twelvelabs-movie-trailer-int8_hnsw\n",
+      "Indexing 155 documents into twelvelabs-movie-trailer-bbq_hnsw...\n",
+      "\tSuccessfully indexed 155 documents into twelvelabs-movie-trailer-bbq_hnsw\n",
+      "Completed indexing documents into twelvelabs-movie-trailer-bbq_hnsw\n",
+      "Indexing 155 documents into twelvelabs-movie-trailer-bbq_flat...\n",
+      "\tSuccessfully indexed 155 documents into twelvelabs-movie-trailer-bbq_flat\n",
+      "Completed indexing documents into twelvelabs-movie-trailer-bbq_flat\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "index_varieties = [\n",
@@ -803,10 +1024,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1e60c1d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embedding youtube_22w7z_lT6YM already has an embedding. Skipping embedding creation.\n",
+      "{'took': 3, 'timed_out': False, '_shards': {'total': 5, 'successful': 5, 'skipped': 0, 'failed': 0}, 'hits': {'total': {'value': 10, 'relation': 'eq'}, 'max_score': 0.6417193, 'hits': [{'_index': 'twelvelabs-movie-trailer-flat', '_id': 'kBqvKpkBnp_cvWPLqCon', '_score': 0.6417193, 'fields': {'title': ['Jurassic World Rebirth | Official Trailer'], 'start_sec': [134.5], 'video_id': ['jan5CFWs9ic']}}, {'_index': 'twelvelabs-movie-trailer-flat', '_id': 'vhqvKpkBnp_cvWPLqioN', '_score': 0.6409597, 'fields': {'title': ['How To Train Your Dragon | Official Trailer'], 'start_sec': [59.0], 'video_id': ['22w7z_lT6YM']}}, {'_index': 'twelvelabs-movie-trailer-flat', '_id': 'uRqvKpkBnp_cvWPLqioN', '_score': 0.64061135, 'fields': {'title': ['How To Train Your Dragon | Official Trailer'], 'start_sec': [34.6], 'video_id': ['22w7z_lT6YM']}}, {'_index': 'twelvelabs-movie-trailer-flat', '_id': 'vBqvKpkBnp_cvWPLqioN', '_score': 0.63972485, 'fields': {'title': ['How To Train Your Dragon | Official Trailer'], 'start_sec': [50.399998], 'video_id': ['22w7z_lT6YM']}}, {'_index': 'twelvelabs-movie-trailer-flat', '_id': 'uxqvKpkBnp_cvWPLqioN', '_score': 0.6388538, 'fields': {'title': ['How To Train Your Dragon | Official Trailer'], 'start_sec': [46.3], 'video_id': ['22w7z_lT6YM']}}, {'_index': 'twelvelabs-movie-trailer-flat', '_id': 'eRqvKpkBnp_cvWPLqCon', '_score': 0.6381582, 'fields': {'title': ['Jurassic World Rebirth | Official Trailer'], 'start_sec': [18.8], 'video_id': ['jan5CFWs9ic']}}, {'_index': 'twelvelabs-movie-trailer-flat', '_id': 'vRqvKpkBnp_cvWPLqioN', '_score': 0.63632464, 'fields': {'title': ['How To Train Your Dragon | Official Trailer'], 'start_sec': [54.399998], 'video_id': ['22w7z_lT6YM']}}, {'_index': 'twelvelabs-movie-trailer-flat', '_id': 'yhqvKpkBnp_cvWPLqioN', '_score': 0.63516366, 'fields': {'title': ['How To Train Your Dragon | Official Trailer'], 'start_sec': [116.7], 'video_id': ['22w7z_lT6YM']}}, {'_index': 'twelvelabs-movie-trailer-flat', '_id': 'shqvKpkBnp_cvWPLqioN', '_score': 0.6347714, 'fields': {'title': ['How To Train Your Dragon | Official Trailer'], 'start_sec': [0.0], 'video_id': ['22w7z_lT6YM']}}, {'_index': 'twelvelabs-movie-trailer-flat', '_id': 'uhqvKpkBnp_cvWPLqioN', '_score': 0.6343807, 'fields': {'title': ['How To Train Your Dragon | Official Trailer'], 'start_sec': [39.1], 'video_id': ['22w7z_lT6YM']}}]}}\n"
+     ]
+    }
+   ],
    "source": [
     "# Create text embedding\n",
     "def create_text_embedding(text_query: str) -> list:\n",
@@ -898,10 +1128,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "abab8a65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "24827b62d60f4de8bef691612274aee3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Text(value='', description='Search:', layout=Layout(width='70%'), placeholder='Enter your searc…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8eee91e722ce4d8095d5a0211a1b451d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets, HTML as WHTML, HBox, Layout\n",
     "from IPython.display import display\n",
@@ -962,6 +1221,18 @@
     "\n",
     "# Call this to create the UI\n",
     "search_videos()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1d8e3d1",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "#### Screenshot of UI when done:\n",
+    "\n",
+    "![Screenshot](./images/marengo2.jpg) "
    ]
   }
  ],
