Changes inference ID.

--- a/notebooks/search/09-semantic-text.ipynb
+++ b/notebooks/search/09-semantic-text.ipynb
@@ -279,7 +279,7 @@
     "            \"plot\": {\"type\": \"text\", \"copy_to\": \"plot_semantic\"},\n",
     "            \"plot_semantic\": {\n",
     "                \"type\": \"semantic_text\",\n",
-    "                \"inference_id\": \".elser-2-elastic\",\n",
+    "                \"inference_id\": \".elser-v2-elastic\",\n",
     "            },\n",
     "        }\n",
     "    },\n",
