--- a/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
+++ b/supporting-blog-content/context-engineering-mistral-completions/notebook.ipynb
@@ -62,8 +62,8 @@
    "source": [
     "# Configuration - Update these values with your credentials\n",
     "ELASTICSEARCH_HOST = \"https://tralmis-tral-d91b08.es.us-central1.gcp.elastic.cloud:443\" \n",
-    "ELASTICSEARCH_API_KEY = \"a2ZYYWhwa0JyZ3hvcjZfU192TTM6M3JWcnZNRnZrNUxPZ0NlODRDOVU0QQ==\"  \n",
-    "MISTRAL_API_KEY = \"cYmY73ytvOullkpj2K4bB0lGArQZohOZ\"  # Replace with your Mistral API key\n",
+    "ELASTICSEARCH_API_KEY = \"elasticsearchapikey==\"  \n",
+    "MISTRAL_API_KEY = \"mistralapikey==\"  # Replace with your Mistral API key\n",
     "\n",
     "MISTRAL_MODEL = \"mistral-large-latest\"  # Mistral model to use\n",
     "INFERENCE_ENDPOINT_NAME = \"mistral-embeddings-chat-completion\"  # Name for the inference endpoint\n",
